# GROUPS

./: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/Scripted/RigidAlignmentModule/: CMakeLists.txt  RigidAlignmentModule.py
Modules/Scripted/RigidAlignmentModuleMetadata/: __init__.py.in
